assets/css/style.css
/* ... */
.section-content {
    font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}


/** Pages styles */
body.site_controller section#how_to_help{
    text-align: center;
    padding-top: 50px;
}

body.site_controller section#how_to_help .section-title{
    font-size: 32px;
}
body.site_controller section#how_to_help .section-content{
    color: #B0B0B0;
    font-size: 1.5em;
    width: 50%;
    margin: auto;
}
@media screen and (max-width: 768px) {
    body.site_controller section#how_to_help .section-content {
        width: 90%;
    }
}

body.site_controller section#sequence{
    margin: 100px 0;
    padding: 30px;
    height: 30vmin;
    text-align: center;
    background-color: #CCCCCC;
}
body.site_controller section#sequence div, body.site_controller section#sequence div svg{
    height: 100%;
}
body.site_controller section#sequence div.arrow svg{
    position: absolute;
    height: 25%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}
body.site_controller section#sequence div#siteurl{
    position: absolute;
    height: 32px;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    color: #FFFFFF;
    font-size: 1.5em;
    font-weight: bold;
    text-align: center;
    text-shadow: 1px 1px #000000;
}

body.site_controller #rewards h1{
    text-align: center;
    margin-bottom: 50px;
}

@media screen and (max-width: 768px) {
    body.site_controller #rewards .reward {
        margin-bottom: 65px;
    }
}

body.site_controller #rewards .reward .reward-box{
    margin-bottom: 20px;
    text-align: center;
    border-radius: 10px;
    box-shadow: 1px 1px 5px #000000;
    background-color: #E2E2E2;
}
body.site_controller #rewards .reward .reward-box img{
    width: 90%;
}
body.site_controller #rewards .reward .reward-box .reward-contribution{
    background-color: #FFFFFF;
    border-top: 1px inset #000000;
}
body.site_controller #rewards .reward .reward-box .reward-contribution .contribution-label{
    display: inline-block;
    position: relative;
    top: -15px;
    width: 75%;
    background-color: #FFFFFF;
    border-radius: 10px;
    font-size: 1.3em;
    text-transform: uppercase;
    border-top: 1px inset #000000;
}
body.site_controller #rewards .reward .reward-box .reward-contribution .reward-amount{
    font-size: 2em;
    font-weight: bold;
}
body.site_controller #rewards .reward .reward-box a{
    display: block;
    border-radius: 0 0 10px 10px;
    color: #FFFFFF;
    text-transform: uppercase;
    padding: 3px;
    font-size: 1.3em;
    font-weight: bold;

    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4660ff+0,e94196+100 */
    background: #4660ff; /* Old browsers */
    background: -moz-linear-gradient(left, #4660ff 0%, #e94196 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left, #4660ff 0%,#e94196 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, #4660ff 0%,#e94196 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4660ff', endColorstr='#e94196',GradientType=1 ); /* IE6-9 */
}
body.site_controller #rewards .reward .reward-box a:hover{
    text-decoration: none;
}

body.site_controller #rewards .reward .reward-description{
    text-align: justify;
}
body.site_controller #donate {
    text-align: center;
    margin: 150px 0 100px 0;
}
@media screen and (max-width: 768px){
    body.site_controller #donate {
        margin: 0 0 100px 0;
    }
}

body.site_controller #donate a{
    font-size: 2.3em;
    font-weight: bolder;
    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    padding: 10px 90px;
    background-color: #E91E63;
    color: #FFFFFF;
}

body.donation_controller.index_action #donation_amount{
    margin: 50px auto;
}
body.donation_controller.index_action #donation_slider .ui-slider-handle{
    border-radius: 10px;
    border: 1px solid #000000;
    width: 1.5em;
    height: 1.5em;
    top: -.4em;
    margin-left: -.7em;
    outline: none;
}
body.donation_controller.index_action #donation_slider #handle-label {
    position: absolute;
    top: 2.2em;
    margin-left: -.2em;
    background-color: #EEEEEE;
    width: 26px;
    line-height: 25px;
    text-align: center;
    box-shadow: 1px 1px 1px #000000;
}
body.donation_controller.index_action #donation_slider #handle-label-arrow{
    position: absolute;
    top: -.65em;
    width: 0;
    height: 0;
    border-left: 13px solid transparent;
    border-right: 13px solid transparent;
    border-bottom: 10px solid #EEEEEE;
}
body.donation_controller.index_action #donation_objectives{
    position: relative;
    height: 170px;
}
body.donation_controller.index_action .donation_objective{
    position: absolute;
    width: 150px;
    height: 150px;
    padding: 5px;
    border-radius: 5px;
    background-color: #EEEEEE;
    transform: translate(-50%, 0);
}
body.donation_controller.index_action .donation_objective .objective_arrow{
    position: absolute;
    bottom: -12px;
    left: 0;
    right: 0;
    margin: auto;
    width: 0;
    height: 0;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-top: 12px solid #EEEEEE;
}
body.donation_controller.index_action .donation_objective#obj1{
    left: 25%;
}
body.donation_controller.index_action .donation_objective#obj2{
    left: 50%;
}
body.donation_controller.index_action .donation_objective#obj3{
    left: 75%;
}

body.donation_controller.index_action #error_box{
    text-align: center;
    margin-top: 120px;
}

body.donation_controller.index_action #donation_data{
    box-shadow: 1px 1px 3px #000000;
    border-radius: 5px;
    padding: 20px;
    margin: 0 auto 80px auto;
}
body.donation_controller.index_action #donation_data input,
body.donation_controller.index_action #donation_data select{
    background-color: #F2F2F2;
}
/* ... */

